[package]
name = "scrnsht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
# smithay-client-toolkit = { version = "0.17.0", default-features = false, features = ["calloop"] }
smithay-client-toolkit = { path = "../client-toolkit" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
# wayland-client = "0.31.0"
# wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }
