[package]
name = "scrnsht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.6"
# image = "0.25"
image = { git = "https://github.com/Syudagye/image-rs" }
log = "0.4.25"
rgb = "0.8.50"
# smithay-client-toolkit = { version = "0.17.0", default-features = false, features = ["calloop"] }
smithay-client-toolkit = { path = "../client-toolkit" }
thiserror = "2.0.11"
# wayland-client = "0.31.0"
# wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }
